# RustDemoWebServer

./: Cargo.toml
src/: headers.rs  helpers.rs  main.rs  requestcontext.rs  response.rs
src/response/: mod.rs  response_actions.rs  response_codes.rs
wwwroot/: demo.html  index.html
