[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
websocket = "0.26.5"
tokio = { version = "1", features = ["full"] }
tokio-reactor = "0.1.12"
handlebars = "4.3.6"
futures = "0.3"
async-std = "1.12.0"
